# star_pi_runner

./: Action.py  Block.py  Cargo.toml  Configurator.py  Cross.toml  Dockerfile  README.md  Trigger.py  config.json  deploy.bat  layout.json  main.py
config/: config.json
libs/: bindings.rs  tof.c
src/: blocks.rs  button.rs  event.rs  gpio.rs  gui.rs  hx711.rs  main.rs  motor.rs  scale.rs  stepper.rs  websocket.rs  workflow.rs
src/gui/: gui.rs  mod.rs  package-lock.json  package.json
src/gui/src/: App.vue  app.js  rpc.js
src/gui/src/components/: Scale.vue  TaskList.vue  Test.vue
src/gui/src/view/: Home.vue  Settings.vue
