[package]
name = "star_pi_runner"
version = "0.1.0"
authors = ["datomo <dave.lengw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
